--- a/containers/rootfs-musl/Dockerfile
+++ b/containers/rootfs-musl/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 
-FROM --platform=$BUILDPLATFORM alpine:3.20 AS build
+FROM --platform=$BUILDPLATFORM alpine:3.21 AS build
 
 ARG ARCADE_COMMIT
 ARG BUILD_TIMESTAMP
@@ -9,13 +9,13 @@ RUN <<EOF
 apk update
 apk add git bash alpine-keys
 
-git clone https://github.com/loongson-community/dotnet-arcade.git /arcade
+git clone https://github.com/dotnet/dotnet-arcade.git /arcade
 cd /arcade && git checkout "$ARCADE_COMMIT"
 EOF
 
 RUN <<EOF
 mkdir /rootfs
-/arcade/eng/common/cross/build-rootfs.sh loongarch64 alpineedge --skipsigcheck --rootfsdir /rootfs || exit 1
+/arcade/eng/common/cross/build-rootfs.sh loongarch64 alpine3.21 --skipsigcheck --rootfsdir /rootfs || exit 1
 
 cat > /rootfs/README.txt <<READMEEOF
 # loongson-community/docker-unofficial-build artifact
